// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ViewProduct /> test cases for connected ViewProduct component should dispatch actions to mock store and update state 1`] = `
<Container
  className="content-container"
  tag="div"
>
  <div
    className="view__container"
  >
    <h3
      className="view__title"
    >
      Name Frame
    </h3>
    <p
      className="view__description"
    >
      test test test test test test test test test test
    </p>
    <div
      className="view__tags"
    >
      <Blueprint3.Tag
        active={true}
        key="0"
        style={
          Object {
            "margin": "0px 4px 4px",
          }
        }
      >
        Personalised
      </Blueprint3.Tag>
      <Blueprint3.Tag
        active={true}
        key="1"
        style={
          Object {
            "margin": "0px 4px 4px",
          }
        }
      >
        Name
      </Blueprint3.Tag>
      <Blueprint3.Tag
        active={true}
        key="2"
        style={
          Object {
            "margin": "0px 4px 4px",
          }
        }
      >
        Frame
      </Blueprint3.Tag>
    </div>
    <ImageCarousel
      images={
        Array [
          Object {
            "bucket": "fjadecreatesmedia121747-production",
            "key": "/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584106241635-IMG_0299.JPEG",
            "region": "eu-west-2",
          },
          Object {
            "bucket": "fjadecreatesmedia121747-production",
            "key": "/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584106241635-IMG_0299.JPEG",
            "region": "eu-west-2",
          },
          Object {
            "bucket": "fjadecreatesmedia121747-production",
            "key": "/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584106268144-IMG_0305.JPEG",
            "region": "eu-west-2",
          },
        ]
      }
    />
    <div
      className="view__price"
    >
      <p>
        The cost for 
        Name Frame
         is £
        14.50
         + £
        4.50
         postage and packaging
      </p>
    </div>
    <Blueprint3.Button
      icon={
        <i
          className="fas fa-shopping-cart view__icon"
        />
      }
      intent="primary"
      onClick={[Function]}
      text="Add to Basket"
    />
  </div>
</Container>
`;

exports[`<ViewProduct /> test cases for connected ViewProduct component should render correctly 1`] = `
<ViewProduct
  addToBasket={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  userAttributes={
    Object {
      "email": "test@test.com",
      "email_verified": true,
      "identities": null,
      "name": "James Gower",
      "phone_number": "+12345678910",
      "phone_number_verified": false,
      "sub": "testsub123123abc",
    }
  }
/>
`;

exports[`<ViewProduct /> test cases for unconnected ViewProduct component should render correctly when injecting product with no set price into state 1`] = `
<Container
  className="content-container"
  tag="div"
>
  <div
    className="view__container"
  >
    <h3
      className="view__title"
    >
      Racing Cake
    </h3>
    <p
      className="view__description"
    >
      Test test test test test test
    </p>
    <div
      className="view__tags"
    >
      <Blueprint3.Tag
        active={true}
        key="0"
        style={
          Object {
            "margin": "0px 4px 4px",
          }
        }
      >
        Cake
      </Blueprint3.Tag>
      <Blueprint3.Tag
        active={true}
        key="1"
        style={
          Object {
            "margin": "0px 4px 4px",
          }
        }
      >
        Racing
      </Blueprint3.Tag>
    </div>
    <ImageCarousel
      images={
        Array [
          Object {
            "bucket": "fjadecreatesmedia121747-production",
            "key": "/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584357819265-racecarcrop.jpg",
            "region": "eu-west-2",
          },
          Object {
            "bucket": "fjadecreatesmedia121747-production",
            "key": "/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584357839998-IMG_3565.JPEG",
            "region": "eu-west-2",
          },
          Object {
            "bucket": "fjadecreatesmedia121747-production",
            "key": "/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584357864535-IMG_3659.JPG",
            "region": "eu-west-2",
          },
        ]
      }
    />
    <div
      className="view__price"
    >
      <p>
        Please send a request with your personalisation preferences, and I will get back to you as soon as possible with a quote.
      </p>
    </div>
    <Blueprint3.Button
      icon={
        <i
          className="fas fa-credit-card view__icon"
        />
      }
      intent="success"
      text="Request a Quote"
    />
  </div>
</Container>
`;

exports[`<ViewProduct /> test cases for unconnected ViewProduct component should render correctly when injecting product with set price into state 1`] = `
<Container
  className="content-container"
  tag="div"
>
  <div
    className="view__container"
  >
    <h3
      className="view__title"
    >
      Name Frame
    </h3>
    <p
      className="view__description"
    >
      test test test test test test test test test test
    </p>
    <div
      className="view__tags"
    >
      <Blueprint3.Tag
        active={true}
        key="0"
        style={
          Object {
            "margin": "0px 4px 4px",
          }
        }
      >
        Personalised
      </Blueprint3.Tag>
      <Blueprint3.Tag
        active={true}
        key="1"
        style={
          Object {
            "margin": "0px 4px 4px",
          }
        }
      >
        Name
      </Blueprint3.Tag>
      <Blueprint3.Tag
        active={true}
        key="2"
        style={
          Object {
            "margin": "0px 4px 4px",
          }
        }
      >
        Frame
      </Blueprint3.Tag>
    </div>
    <ImageCarousel
      images={
        Array [
          Object {
            "bucket": "fjadecreatesmedia121747-production",
            "key": "/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584106241635-IMG_0299.JPEG",
            "region": "eu-west-2",
          },
          Object {
            "bucket": "fjadecreatesmedia121747-production",
            "key": "/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584106241635-IMG_0299.JPEG",
            "region": "eu-west-2",
          },
          Object {
            "bucket": "fjadecreatesmedia121747-production",
            "key": "/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584106268144-IMG_0305.JPEG",
            "region": "eu-west-2",
          },
        ]
      }
    />
    <div
      className="view__price"
    >
      <p>
        The cost for 
        Name Frame
         is £
        14.50
         + £
        4.50
         postage and packaging
      </p>
    </div>
    <Blueprint3.Button
      icon={
        <i
          className="fas fa-shopping-cart view__icon"
        />
      }
      intent="primary"
      onClick={[Function]}
      text="Add to Basket"
    />
  </div>
</Container>
`;

exports[`<ViewProduct /> test cases for unconnected ViewProduct component should render the loading component when there is no product 1`] = `<Loading />`;
